# Prac_CallPythonFromCpp

./: CMakeLists.txt  main.cpp
